include $(top_srcdir)/Makefile.common

INCLUDES = -I$(srcdir)/..

noinst_LIBRARIES = librender.a
noinst_HEADERS = \
	HDRRenderer.h \
	PostFilter.h \
	PostShader.h \
	Renderer.h \
	RenderTarget.h \
	Texture.h

librender_a_SOURCES = \
	HDRRenderer.cpp \
	PostFilter.cpp \
	PostShader.cpp \
	Renderer.cpp \
	RenderTarget.cpp \
	Texture.cpp
